--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -2740,6 +2740,255 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Integer:\n",
+    "    def __init__(self, start_value):\n",
+    "        self.__value = start_value\n",
+    "        \n",
+    "    @property\n",
+    "    def value(self):\n",
+    "        return self.__value\n",
+    "    \n",
+    "    @value.setter\n",
+    "    def value(self, val):\n",
+    "        if isinstance(val, int):\n",
+    "            self.__value = val\n",
+    "        else:\n",
+    "            raise ValueError('должно быть целое число')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_lenght = 10\n",
+    "cell = Integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [cell(0) for _ in range(max_lenght)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[2].value = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[1].value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ad = Integer(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ad.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(ad.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 3 0 0 0 0 0 0 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(*[x.value for x in a])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Table:\n",
+    "    def __init__(self, model, color):\n",
+    "        self.model = model\n",
+    "        self.color = color\n",
+    "\n",
+    "\n",
+    "class RoundTable(Table):\n",
+    "    def __init__(self, model, color, radius, height):\n",
+    "        super().__init__(model, color)\n",
+    "        self.radius = radius\n",
+    "        self.height = height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rt = RoundTable('PC', 'brown', 500, 750)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class IntegerValue: # дескриптор данных для работы с целыми числами.\n",
+    "    def __set_name__(self, owner, name):\n",
+    "        self.name = \"_\" + name\n",
+    "        \n",
+    "    def __get__(self, instance, owner):\n",
+    "        # return instance.__dict__[self.name]\n",
+    "        return getattr(instance, self.name)\n",
+    "    \n",
+    "    def __set__(self, instance, value):\n",
+    "        # print(f\"__set__: {self.name} = {value}\")\n",
+    "        if not isinstance(value, int):\n",
+    "            raise ValueError('возможны только целочисленные значения')\n",
+    "        # instance.__dict__[self.name] = value\n",
+    "        setattr(instance, self.name, value)\n",
+    "        \n",
+    "        \n",
+    "class CellInteger: # для операций с целыми числами;\n",
+    "    value = IntegerValue()\n",
+    "    \n",
+    "    def __init__(self, start_value = 0):\n",
+    "        self.value = start_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows = 2\n",
+    "cols = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells = tuple()\n",
+    "\n",
+    "for _ in range(rows):\n",
+    "    res = tuple(CellInteger() for _ in range(cols))\n",
+    "    cells += res,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells[0][1].value = 4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def asd(fd = False):\n",
+    "    if not fd:\n",
+    "        raise ValueError('параметр cell не указан')\n",
+    "    else:\n",
+    "        print(fd)\n",
+    "        \n",
+    "asd(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
