--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -3056,22 +3056,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cell:\n",
+    "    def __init__(self):\n",
+    "        self.is_free = True\n",
+    "        self.value = 0 # 1 - крестик; 2 - нолик"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pole = tuple()\n",
+    "\n",
+    "a = tuple(tuple(Cell() for _ in range(3)) for _ in range(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'slice' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'slice' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "((<__main__.Cell at 0x1108c8ce0>,\n",
+       "  <__main__.Cell at 0x1108c8c20>,\n",
+       "  <__main__.Cell at 0x1108c92e0>),\n",
+       " (<__main__.Cell at 0x1108c8650>,\n",
+       "  <__main__.Cell at 0x1108cbe00>,\n",
+       "  <__main__.Cell at 0x1108c8d10>),\n",
+       " (<__main__.Cell at 0x1108c9220>,\n",
+       "  <__main__.Cell at 0x1108ca240>,\n",
+       "  <__main__.Cell at 0x1108ca300>))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<__main__.Cell at 0x1108c8ce0>,\n",
+       " <__main__.Cell at 0x1108c8c20>,\n",
+       " <__main__.Cell at 0x1108c92e0>)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0]"
+   ]
   },
   {
    "cell_type": "code",
