--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -3056,47 +3056,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Cell:\n",
-    "    def __init__(self):\n",
-    "        self.is_free = True\n",
-    "        self.value = 0 # 1 - крестик; 2 - нолик"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pole = tuple()\n",
-    "\n",
-    "a = tuple(tuple(Cell() for _ in range(3)) for _ in range(3))"
+    "    def __init__(self, value):\n",
+    "        self.value = value"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "pole = tuple()\n",
+    "\n",
+    "a = tuple(tuple('+' for _ in range(2)) for _ in range(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = tuple(tuple())\n",
+    "rows = 0\n",
+    "cols = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row = 2\n",
+    "\n",
+    "a += tuple(tuple(None for _ in range(cols)) for _ in range(row - rows + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((<__main__.Cell at 0x1108c8ce0>,\n",
-       "  <__main__.Cell at 0x1108c8c20>,\n",
-       "  <__main__.Cell at 0x1108c92e0>),\n",
-       " (<__main__.Cell at 0x1108c8650>,\n",
-       "  <__main__.Cell at 0x1108cbe00>,\n",
-       "  <__main__.Cell at 0x1108c8d10>),\n",
-       " (<__main__.Cell at 0x1108c9220>,\n",
-       "  <__main__.Cell at 0x1108ca240>,\n",
-       "  <__main__.Cell at 0x1108ca300>))"
+       "((), (), ())"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rows = len(a)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[41], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(rows):\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(col \u001b[38;5;241m-\u001b[39m cols \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m----> 5\u001b[0m         \u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "col = 3\n",
+    "\n",
+    "for i in range(rows):\n",
+    "    for _ in range(col - cols + 1):\n",
+    "        a[i] += None,\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((), (), ())"
+      ]
+     },
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3107,24 +3187,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "a += tuple(tuple(None for _ in range(len(a[0]))) for _ in range(row - len(a) + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<__main__.Cell at 0x1108c8ce0>,\n",
-       " <__main__.Cell at 0x1108c8c20>,\n",
-       " <__main__.Cell at 0x1108c92e0>)"
+       "()"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[0]"
+    "tuple(tuple())"
    ]
   },
   {
@@ -3163,6 +3258,210 @@
    ],
    "source": [
     "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple': 5, 'orange': 8}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dict = {'apple': 5, 'orange': 8}\n",
+    "\n",
+    "# Пытаемся удалить элемент с ключом 'banana', но ключ отсутствует\n",
+    "# my_dict.pop('sa', raise IndexError('ячейка с указанными индексами не существует'))\n",
+    "my_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'apple' in my_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0)\n",
+      "<class 'tuple'>\n",
+      "0 0\n",
+      "(0, slice(None, None, None))\n",
+      "<class 'tuple'>\n",
+      "0 slice(None, None, None)\n",
+      "(slice(None, None, None), 0)\n",
+      "<class 'tuple'>\n",
+      "slice(None, None, None) 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Cell:\n",
+    "    def __init__(self):\n",
+    "        self.is_free = True\n",
+    "        self.value = 0 # 1 - крестик; 2 - нолик\n",
+    "        \n",
+    "    def __bool__(self):\n",
+    "        return self.is_free\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "class TicTacToe:\n",
+    "    def __init__(self):\n",
+    "        self.pole = tuple(tuple(Cell() for _ in range(3)) for _ in range(3))\n",
+    "        \n",
+    "    def clear(self):\n",
+    "        self.__init__()\n",
+    "        # self.pole = tuple(tuple(Cell() for _ in range(3)) for _ in range(3))\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return f'\\n'.join([f' '.join([str(cell.value) for cell in row]) for row in self.pole])\n",
+    "    \n",
+    "    def __getitem__(self, item):\n",
+    "        print(item)\n",
+    "        print(type(item))\n",
+    "        print(item[0], item[1])\n",
+    "        if isinstance(item[0], slice):\n",
+    "            return self.pole[0][item[1]].value, self.pole[1][item[1]].value, self.pole[2][item[1]].value, \n",
+    "        elif isinstance(item[1], slice):\n",
+    "            return self.pole[item[0]][0].value, self.pole[item[0]][1].value, self.pole[item[0]][2].value,\n",
+    "        elif item[0] >= 3 or item[1] >= 3:\n",
+    "            raise IndexError('неверный индекс клетки')\n",
+    "        return self.pole[item[0]][item[1]].value\n",
+    "        \n",
+    "    def __setitem__(self, key, value):\n",
+    "        if key[0] >= 3 or key[1] >= 3:\n",
+    "            raise IndexError('неверный индекс клетки')\n",
+    "        if self.pole[key[0]][key[1]].is_free:\n",
+    "            self.pole[key[0]][key[1]].value = value\n",
+    "        else:\n",
+    "            raise ValueError('клетка уже занята')\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "game = TicTacToe()\n",
+    "game.clear()\n",
+    "# game[0, 0] = 1\n",
+    "game[1, 0] = 2\n",
+    "# print(game)\n",
+    "# формируется поле:\n",
+    "# 1 0 0\n",
+    "# 2 0 0\n",
+    "# 0 0 0\n",
+    "# game[3, 2] = 2 # генерируется исключение IndexError\n",
+    "# print('value', game[0, 0])\n",
+    "if game[0, 0] == 0:\n",
+    "    game[0, 0] = 2\n",
+    "    # print(game)\n",
+    "v1 = game[0, :]  # 1, 0, 0\n",
+    "# print(v1)\n",
+    "\n",
+    "v2 = game[:, 0]  # 1, 2, 0\n",
+    "# print(v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {(1,3): 'adda',\n",
+    " (3,4): 'htr',\n",
+    " (5,7): 'tyj',\n",
+    " (2,4): 'iu',\n",
+    " (1,10): '[p]',\n",
+    " }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 3): 'adda', (3, 4): 'htr', (5, 7): 'tyj', (2, 4): 'iu', (1, 10): '[p]'}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max([x[0] for x in d.keys()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max([x[1] for x in d.keys()])"
    ]
   },
   {
