--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -3505,6 +3505,200 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [2,4,56,67]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "67"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 56, 67, 3]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a + [b]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 56, 67]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(-1,int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cell:\n",
+    "    def __init__(self, data=0):\n",
+    "        self.__data = data\n",
+    "        \n",
+    "    @property\n",
+    "    def data(self):\n",
+    "        return self.__data\n",
+    "    \n",
+    "    @data.setter\n",
+    "    def data(self, value):\n",
+    "        self.__data = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((<__main__.Cell at 0x113219700>,\n",
+       "  <__main__.Cell at 0x113219d60>,\n",
+       "  <__main__.Cell at 0x1132181d0>,\n",
+       "  <__main__.Cell at 0x11321a6c0>),\n",
+       " (<__main__.Cell at 0x11321a600>,\n",
+       "  <__main__.Cell at 0x11321b650>,\n",
+       "  <__main__.Cell at 0x11321b3b0>,\n",
+       "  <__main__.Cell at 0x11321b590>),\n",
+       " (<__main__.Cell at 0x11321b560>,\n",
+       "  <__main__.Cell at 0x11321ad20>,\n",
+       "  <__main__.Cell at 0x11321ab10>,\n",
+       "  <__main__.Cell at 0x11321b4d0>))"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row = 3\n",
+    "col = 4\n",
+    "\n",
+    "tuple(tuple(Cell() for _ in range(col)) for _ in range(row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = 12.5\n",
+    "types = float\n",
+    "\n",
+    "isinstance(d, types)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "types(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
