--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -3699,6 +3699,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[10, 10, 10], [10, 10, 10]]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rows = 2\n",
+    "cols = 3\n",
+    "fill_value = 10\n",
+    "\n",
+    "[[fill_value for _ in range(cols)] for _ in range(rows)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2], [3, 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def asds(*args):\n",
+    "    print([[self.fill_value for _ in range(self.cols)] for _ in range(self.rows)])\n",
+    "    \n",
+    "    \n",
+    "asds([[1, 2], [3, 4]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [[1, 2], [3, 2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all([len(s)==len(a[0]) for s in a])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[True, True], [True, True]]"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[isinstance(x, (int, float)) for x in row] for row in a]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
