--- a/test_note.ipynb
+++ b/test_note.ipynb
@@ -3622,27 +3622,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((<__main__.Cell at 0x113219700>,\n",
-       "  <__main__.Cell at 0x113219d60>,\n",
-       "  <__main__.Cell at 0x1132181d0>,\n",
-       "  <__main__.Cell at 0x11321a6c0>),\n",
-       " (<__main__.Cell at 0x11321a600>,\n",
-       "  <__main__.Cell at 0x11321b650>,\n",
-       "  <__main__.Cell at 0x11321b3b0>,\n",
-       "  <__main__.Cell at 0x11321b590>),\n",
-       " (<__main__.Cell at 0x11321b560>,\n",
-       "  <__main__.Cell at 0x11321ad20>,\n",
-       "  <__main__.Cell at 0x11321ab10>,\n",
-       "  <__main__.Cell at 0x11321b4d0>))"
+       "((<__main__.Cell at 0x113218e60>,\n",
+       "  <__main__.Cell at 0x113218c80>,\n",
+       "  <__main__.Cell at 0x113219fa0>),\n",
+       " (<__main__.Cell at 0x113218aa0>,\n",
+       "  <__main__.Cell at 0x113219e80>,\n",
+       "  <__main__.Cell at 0x11321a000>),\n",
+       " (<__main__.Cell at 0x1132187d0>,\n",
+       "  <__main__.Cell at 0x113219610>,\n",
+       "  <__main__.Cell at 0x11321a2a0>))"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3651,7 +3648,7 @@
     "row = 3\n",
     "col = 4\n",
     "\n",
-    "tuple(tuple(Cell() for _ in range(col)) for _ in range(row))"
+    "tuple(tuple(Cell() for _ in range(3)) for _ in range(3))\n"
    ]
   },
   {
